5-ingress/fussy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fussy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: fussy
  type: ClusterIP
