5-ingress/fussy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: fussy
spec:
  rules:
  - host: fussy-app.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: fussy
          servicePort: 80
        path: /
